--- a/public/index.html
+++ b/public/index.html
@@ -7,12 +7,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta property="og:title"
           content="Hitman le Soundboard"/>
+    <meta property="og:image"
+          content="img/mike.jpg"/>
     <meta property="og:site_name" content="Hitman le Soundboard"/>
     <meta name="og:description"
           content="Soundboard adapté du film Hitman le Cobra.">
     <meta property="og:locale:alternate" content="fr_FR"/>
     <title>Hitman le Soundboard</title>
-    <link href='http://fonts.googleapis.com/css?family=Montserrat:400,700'
+    <link href='//fonts.googleapis.com/css?family=Montserrat:400,700'
           rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="css/philippe.css"/>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
