Add tutorial. Yup.

--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,7 @@
       <img src="img/mike.jpg" alt="Mike"/>
       <h1>Hitman le Soundboard</h1>
     </header>
+    <h2 class="ofc">Appuie sur la touche de ton clavier pour entendre la phrase.</h2>
     <ul class="words">
       <li>
         <strong>C</strong>
@@ -60,11 +61,11 @@
       </li>
       <li>
         <strong>T</strong>
-        Ta gueule !
+        Ta gueule!
       </li>
       <li>
         <strong>Y</strong>
-        Vas-y !
+        Vas-y!
       </li>
     </ul>
     <script>
