--- a/public/index.html
+++ b/public/index.html
@@ -70,6 +70,12 @@
         <span class="words-text">Vas-y!</span
       </li>
     </ul>
+    <footer class="site-footer">
+      Confectionné pour la vengeance par
+      <a target="_blank" href="https://twitter.com/kevinvzb">@kevinvzb</a>
+      et
+      <a target="_blank" href="https://twitter.com/henrottesimon">@henrottesimon</a>.
+    </footer>
     <script>
       (function (i, s, o, g, r, a, m) {
         i['GoogleAnalyticsObject'] = r;
