Hover cursor on words.

--- a/public/index.html
+++ b/public/index.html
@@ -26,48 +26,52 @@
       <img src="img/mike.jpg" alt="Mike"/>
       <h1>Hitman le Soundboard</h1>
     </header>
-    <h2 class="ofc keyboard">Appuie sur la touche de ton clavier pour entendre la phrase.</h2>
+    <h2 class="ofc keyboard">
+      Appuie sur la touche de ton clavier pour entendre la phrase.
+      <br/>
+      Ou clique dessus.
+    </h2>
     <h2 class="ofc finger">Appuie sur une des phrases pour l'entendre.</h2>
     <ul class="words">
       <li data-sound="petit-con">
         <strong>C</strong>
-        <span class="words-text">Je vais te tuer petit con!</span
+        <span class="words-text">Je vais te tuer petit con!</span>
       </li>
       <li data-sound="sale-encule">
         <strong>E</strong>
-        <span class="words-text">Viens ici sale enculé!</span
+        <span class="words-text">Viens ici sale enculé!</span>
       </li>
       <li data-sound="mon-frere">
         <strong>F</strong>
-        <span class="words-text">Mon frère... Je te vengerai!</span
+        <span class="words-text">Mon frère... Je te vengerai!</span>
       </li>
       <li data-sound="je-sais">
         <strong>J</strong>
-        <span class="words-text">Je sais où tu te caches!</span
+        <span class="words-text">Je sais où tu te caches!</span>
       </li>
       <li data-sound="mourir-connard">
         <strong>M</strong>
-        <span class="words-text">C'est toi qui va mourir connard!</span
+        <span class="words-text">C'est toi qui va mourir connard!</span>
       </li>
       <li data-sound="philippe">
         <strong>P</strong>
-        <span class="words-text">Philippe!</span
+        <span class="words-text">Philippe!</span>
       </li>
       <li data-sound="salaud">
         <strong>S</strong>
-        <span class="words-text">Salaud!</span
+        <span class="words-text">Salaud!</span>
       </li>
       <li data-sound="viens-ici">
         <strong>V</strong>
-        <span class="words-text">Viens ici que je te bute enculé!</span
+        <span class="words-text">Viens ici que je te bute enculé!</span>
       </li>
       <li data-sound="ta-gueule">
         <strong>T</strong>
-        <span class="words-text">Ta gueule!</span
+        <span class="words-text">Ta gueule!</span>
       </li>
       <li data-sound="vas-y">
         <strong>Y</strong>
-        <span class="words-text">Vas-y!</span
+        <span class="words-text">Vas-y!</span>
       </li>
     </ul>
     <footer class="site-footer">
