Add 7 new sounds.

--- a/public/index.html
+++ b/public/index.html
@@ -33,9 +33,21 @@
     </h2>
     <h2 class="ofc finger">Appuie sur une des phrases pour l'entendre.</h2>
     <ul class="words">
+      <li data-sound="a-ce-jour">
+        <strong>A</strong>
+        <span class="words-text">Où est-il à ce jour?</span>
+      </li>
+      <li data-sound="veux-ce-connard">
+        <strong>B</strong>
+        <span class="words-text">Je veux ce connard!</span>
+      </li>
       <li data-sound="petit-con">
         <strong>C</strong>
         <span class="words-text">Je vais te tuer petit con!</span>
+      </li>
+      <li data-sound="vengeance">
+        <strong>D</strong>
+        <span class="words-text">On t'attend pour la vengeance!</span>
       </li>
       <li data-sound="sale-encule">
         <strong>E</strong>
@@ -44,6 +56,14 @@
       <li data-sound="mon-frere">
         <strong>F</strong>
         <span class="words-text">Mon frère... Je te vengerai!</span>
+      </li>
+      <li data-sound="african-americany">
+        <strong>G</strong>
+        <span class="words-text">Où est donc passé Blacky?</span>
+      </li>
+      <li data-sound="payer">
+        <strong>H</strong>
+        <span class="words-text">Tu ne m'échapperas pas!</span>
       </li>
       <li data-sound="je-sais">
         <strong>J</strong>
@@ -56,6 +76,14 @@
       <li data-sound="philippe">
         <strong>P</strong>
         <span class="words-text">Philippe!</span>
+      </li>
+      <li data-sound="qui-a-tue">
+        <strong>Q</strong>
+        <span class="words-text">Qui a tué mon frère?</span>
+      </li>
+      <li data-sound="rien-a-foutre">
+        <strong>R</strong>
+        <span class="words-text">Rien à foutre des japonais</span>
       </li>
       <li data-sound="salaud">
         <strong>S</strong>
