Add sounds - change colors - change key

--- a/public/index.html
+++ b/public/index.html
@@ -13,18 +13,19 @@
     <meta name="og:description"
           content="Soundboard adapté du film Hitman le Cobra.">
     <meta property="og:locale:alternate" content="fr_FR"/>
-    <title>Hitman le Soundboard</title>
+    <title>Dikkenek le Soundboard</title>
     <link href='//fonts.googleapis.com/css?family=Montserrat:400,700'
           rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="css/philippe.css"/>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+    <link rel="stylesheet" href="css/style.css"/>
+    <!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>-->
+    <script src="js/jquery.js"></script>
     <script src="js/modernizr.js"></script>
     <script src="js/philippe.js"></script>
   </head>
   <body class="page-content">
     <header class="page-title">
-      <img src="img/mike.jpg" alt="Mike"/>
-      <h1>Hitman le Soundboard</h1>
+      <img src="img/claudy.jpg" alt="Mike"/>
+      <h1>Dikkenek le Soundboard</h1>
     </header>
     <h2 class="ofc keyboard">
       Appuie sur la touche de ton clavier pour entendre la phrase.
@@ -33,73 +34,285 @@
     </h2>
     <h2 class="ofc finger">Appuie sur une des phrases pour l'entendre.</h2>
     <ul class="words">
-      <li data-sound="a-ce-jour">
+      <li data-sound="alien">
         <strong>A</strong>
-        <span class="words-text">Où est-il à ce jour?</span>
+        <span class="words-text">Alien</span>
       </li>
-      <li data-sound="veux-ce-connard">
+      <li data-sound="bercee_mur">
         <strong>B</strong>
-        <span class="words-text">Je veux ce connard!</span>
+        <span class="words-text">Bercée trop prêt du mur</span>
       </li>
-      <li data-sound="petit-con">
+      <li data-sound="biere">
         <strong>C</strong>
-        <span class="words-text">Je vais te tuer petit con!</span>
+        <span class="words-text">J'veux une bière!</span>
       </li>
-      <li data-sound="vengeance">
+      <li data-sound="boire_gros_tas">
         <strong>D</strong>
-        <span class="words-text">On t'attend pour la vengeance!</span>
+        <span class="words-text">Oh! Tu bois pas tout gros tas!</span>
       </li>
-      <li data-sound="sale-encule">
+      <li data-sound="boitagant">
         <strong>E</strong>
-        <span class="words-text">Viens ici sale enculé!</span>
+        <span class="words-text">Mais non dans la boite à gants</span>
       </li>
-      <li data-sound="mon-frere">
+      <li data-sound="bonjour_sabine">
         <strong>F</strong>
-        <span class="words-text">Mon frère... Je te vengerai!</span>
+        <span class="words-text">Dis "Bonjour Sabine"</span>
       </li>
-      <li data-sound="african-americany">
+      <li data-sound="ca_va_suffir">
         <strong>G</strong>
-        <span class="words-text">Où est donc passé Blacky?</span>
+        <span class="words-text">Ca va suffir maitenant!</span>
       </li>
-      <li data-sound="payer">
+      <li data-sound="candie">
         <strong>H</strong>
-        <span class="words-text">Tu ne m'échapperas pas!</span>
+        <span class="words-text">Si aujourd'hui, tu ressembles plus...</span>
       </li>
-      <li data-sound="je-sais">
+      <li data-sound="carjacker">
+        <strong>I</strong>
+        <span class="words-text">Je viens de me faire carjacker</span>
+      </li>
+      <li data-sound="cheval_truie_tronche">
         <strong>J</strong>
-        <span class="words-text">Je sais où tu te caches!</span>
+        <span class="words-text">En tout cas, ils t'ont pas loupé...</span>
       </li>
-      <li data-sound="mourir-connard">
+      <li data-sound="chips">
+        <strong>K</strong>
+        <span class="words-text">C'est excessivement énervant...</span>
+      </li>
+      <li data-sound="claudy_focan">
+        <strong>L</strong>
+        <span class="words-text">Je suis Claudy Focan</span>
+      </li>
+      <li data-sound="clic_mieux_claque">
         <strong>M</strong>
-        <span class="words-text">C'est toi qui va mourir connard!</span>
+        <span class="words-text">Un petit click</span>
       </li>
-      <li data-sound="philippe">
+      <li data-sound="cochon_electrique">
+        <strong>N</strong>
+        <span class="words-text">Il est mignon le petit cochon</span>
+      </li>
+      <li data-sound="cocker_coffre">
+        <strong>O</strong>
+        <span class="words-text">Y a une gamine avec des yeux ...</span>
+      </li>
+      <li data-sound="connasse_va">
         <strong>P</strong>
-        <span class="words-text">Philippe!</span>
+        <span class="words-text">Connasse va!</span>
       </li>
-      <li data-sound="qui-a-tue">
+      <li data-sound="couilles">
         <strong>Q</strong>
-        <span class="words-text">Qui a tué mon frère?</span>
+        <span class="words-text">Pas commencer à jouer avec mes...</span>
       </li>
-      <li data-sound="rien-a-foutre">
+      <li data-sound="coup_de_boule">
         <strong>R</strong>
-        <span class="words-text">Rien à foutre des japonais</span>
+        <span class="words-text">Le coup de boule du nouvel an</span>
       </li>
-      <li data-sound="salaud">
+      <li data-sound="cracher_lama">
         <strong>S</strong>
-        <span class="words-text">Salaud!</span>
+        <span class="words-text">Cracher comme un lama</span>
       </li>
-      <li data-sound="viens-ici">
-        <strong>V</strong>
-        <span class="words-text">Viens ici que je te bute enculé!</span>
-      </li>
-      <li data-sound="ta-gueule">
+      <li data-sound="dedicace_chteu">
         <strong>T</strong>
-        <span class="words-text">Ta gueule!</span>
+        <span class="words-text">Passer mon permis</span>
       </li>
-      <li data-sound="vas-y">
+      <li data-sound="deux_bieres">
+        <strong>U</strong>
+        <span class="words-text">Je peux avoir deux bières</span>
+      </li>
+      <li data-sound="dose_de_cheval">
+        <strong>V</strong>
+        <span class="words-text">Dose de cheval</span>
+      </li>
+      <li data-sound="encore_une_petite">
+        <strong>W</strong>
+        <span class="words-text">Encore une petite</span>
+      </li>
+      <li data-sound="epilee_copine">
+        <strong>X</strong>
+        <span class="words-text">Est-ce que t'es épilée?</span>
+      </li>
+      <li data-sound="excessivement_enervant">
         <strong>Y</strong>
-        <span class="words-text">Vas-y!</span>
+        <span class="words-text">C'est excessivement énervant</span>
+      </li>
+      <li data-sound="excuse_toi">
+        <strong>Z</strong>
+        <span class="words-text">Excuse toi</span>
+      </li>
+      <li data-sound="fou_ce_type">
+        <strong>*</strong>
+        <span class="words-text">Il est complètement fou ce type</span>
+      </li>
+      <li data-sound="frein_a_main">
+        <strong>*</strong>
+        <span class="words-text">Epais comme un cable de frein à main</span>
+      </li>
+      <li data-sound="gang_bang">
+        <strong>*</strong>
+        <span class="words-text">Gang bang</span>
+      </li>
+      <li data-sound="je_rame">
+        <strong>*</strong>
+        <span class="words-text">Je rime et je rame</span>
+      </li>
+      <li data-sound="jplais_pas">
+        <strong>*</strong>
+        <span class="words-text">J'plais pas à tout le monde</span>
+      </li>
+      <li data-sound="jte_sors">
+        <strong>*</strong>
+        <span class="words-text">Ou tu sors ou je te sors</span>
+      </li>
+      <li data-sound="kdo_caillou">
+        <strong>*</strong>
+        <span class="words-text">Tu lui offres des cailloux</span>
+      </li>
+      <li data-sound="kinder">
+        <strong>*</strong>
+        <span class="words-text">Kinder</span>
+      </li>
+      <li data-sound="king_route">
+        <strong>*</strong>
+        <span class="words-text">C'est moi le king de la route</span>
+      </li>
+      <li data-sound="la_meme">
+        <strong>*</strong>
+        <span class="words-text">La même</span>
+      </li>
+      <li data-sound="le_plus_beau">
+        <strong>*</strong>
+        <span class="words-text">Et voila le plus beau.</span>
+      </li>
+      <li data-sound="les_3_coups">
+        <strong>*</strong>
+        <span class="words-text">Parce que jamais deux sans trois</span>
+      </li>
+      <li data-sound="licenciement">
+        <strong>*</strong>
+        <span class="words-text">Livre sur le licenciement</span>
+      </li>
+      <li data-sound="mal_baisee">
+        <strong>*</strong>
+        <span class="words-text">Mal baisée</span>
+      </li>
+      <li data-sound="mal_reveillee">
+        <strong>*</strong>
+        <span class="words-text">Mal reveillée aujourd'hui</span>
+      </li>
+      <li data-sound="merde_veste">
+        <strong>*</strong>
+        <span class="words-text">Elle sent la merde ta veste</span>
+      </li>
+      <li data-sound="michael_jackson_13sec">
+        <strong>*</strong>
+        <span class="words-text">Ca c'est Michael Jackson</span>
+      </li>
+      <li data-sound="moches">
+        <strong>*</strong>
+        <span class="words-text">Se taper une moche</span>
+      </li>
+      <li data-sound="morte_maitresse">
+        <strong>*</strong>
+        <span class="words-text">Elle est morte la maitresse</span>
+      </li>
+      <li data-sound="moteur">
+        <strong>*</strong>
+        <span class="words-text">Le moteur des voitures de sport</span>
+      </li>
+      <li data-sound="mousse_savon">
+        <strong>*</strong>
+        <span class="words-text">Mousse</span>
+      </li>
+      <li data-sound="negocier_nichons">
+        <strong>*</strong>
+        <span class="words-text">Ne négocie pas avec ses nichons</span>
+      </li>
+      <li data-sound="nenes_cuisses_magasines">
+        <strong>*</strong>
+        <span class="words-text">Des gros nénés, des grosses cuisses</span>
+      </li>
+      <li data-sound="oui_tendu">
+        <strong>*</strong>
+        <span class="words-text">Oui, je suis tendu</span>
+      </li>
+      <li data-sound="pas_de_tutututu">
+        <strong>*</strong>
+        <span class="words-text">Pas de tutututu</span>
+      </li>
+      <li data-sound="pays_de_merde">
+        <strong>*</strong>
+        <span class="words-text">Quel clète ce peye, trou du cul</span>
+      </li>
+      <li data-sound="poil_ou_pas_poil">
+        <strong>*</strong>
+        <span class="words-text">T'es poli ou t'es pas poli</span>
+      </li>
+      <li data-sound="poney">
+        <strong>*</strong>
+        <span class="words-text">Je vais chercher le poneyi</span>
+      </li>
+      <li data-sound="ptite_bite">
+        <strong>*</strong>
+        <span class="words-text">Ptite bite</span>
+      </li>
+      <li data-sound="ptite_culotte">
+        <strong>*</strong>
+        <span class="words-text">Enlève ta petite culotte</span>
+      </li>
+      <li data-sound="ptite_pute">
+        <strong>*</strong>
+        <span class="words-text">Ne la juge pas, tu ne la connais pas</span>
+      </li>
+      <li data-sound="quelle_violence">
+        <strong>*</strong>
+        <span class="words-text">Quelle violence</span>
+      </li>
+      <li data-sound="ressemble_pere_moche">
+        <strong>*</strong>
+        <span class="words-text">Tu ressembles à ton père, il est moche</span>
+      </li>
+      <li data-sound="schnouf_fleau">
+        <strong>*</strong>
+        <span class="words-text">La Schnouf, c'est un fléau</span>
+      </li>
+      <li data-sound="tchin">
+        <strong>*</strong>
+        <span class="words-text">Tchin</span>
+      </li>
+      <li data-sound="tendu_crampe">
+        <strong>*</strong>
+        <span class="words-text">T'es tendu comme une crampe</span>
+      </li>
+      <li data-sound="tendu_tendu">
+        <strong>*</strong>
+        <span class="words-text">Si je te dis que t'es tendu</span>
+      </li>
+      <li data-sound="termine_bonsoir">
+        <strong>*</strong>
+        <span class="words-text">Terminer bonsoir</span>
+      </li>
+      <li data-sound="tete_originale">
+        <strong>*</strong>
+        <span class="words-text">Ta tête est déjà originale</span>
+      </li>
+      <li data-sound="tomber_sus">
+        <strong>*</strong>
+        <span class="words-text">Tomber de son sus</span>
+      </li>
+      <li data-sound="touche_seins">
+        <strong>*</strong>
+        <span class="words-text">Supporte pas qu'on me touche les seins</span>
+      </li>
+      <li data-sound="trou_de_balle">
+        <strong>*</strong>
+        <span class="words-text">Trou de balle</span>
+      </li>
+      <li data-sound="tu_ne_me_vois_pas">
+        <strong>*</strong>
+        <span class="words-text">Tu ne me vois pas</span>
+      </li>
+      <li data-sound="vieille_truie_moyen">
+        <strong>*</strong>
+        <span class="words-text">Vieille truie</span>
       </li>
     </ul>
     <footer class="site-footer">
