--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,8 @@
     <!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>-->
     <script src="js/jquery.js"></script>
     <script src="js/modernizr.js"></script>
-    <script src="js/philippe.js"></script>
+    <script src="js/mousetrap.js"></script>
+    <script src="js/app.js"></script>
   </head>
   <body class="page-content">
     <header class="page-title">
@@ -34,7 +35,7 @@
     </h2>
     <h2 class="ofc finger">Appuie sur une des phrases pour l'entendre.</h2>
     <ul class="words">
-      <li data-sound="alien">
+      <li data-sound="alien" data-keyboard="true" data-key="a">
         <strong>A</strong>
         <span class="words-text">Alien</span>
       </li>
