--- a/public/index.html
+++ b/public/index.html
@@ -3,13 +3,13 @@
   <head>
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta charset="utf-8">
-    <meta name="description" content="Soundboard adapté du film Hitman le Cobra.">
+    <meta name="description" content="Soundboard adapté du film Dikkenek.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta property="og:title"
           content="Hitman le Soundboard"/>
     <meta property="og:image"
           content="img/mike.jpg"/>
-    <meta property="og:site_name" content="Hitman le Soundboard"/>
+    <meta property="og:site_name" content="Dikkenek le Soundboard"/>
     <meta name="og:description"
           content="Soundboard adapté du film Hitman le Cobra.">
     <meta property="og:locale:alternate" content="fr_FR"/>
@@ -301,7 +301,7 @@
       </li>
       <li data-sound="touche_seins">
         <strong>*</strong>
-        <span class="words-text">Supporte pas qu'on me touche les seins</span>
+        <span class="words-text">Supporte pas qu'on me touche</span>
       </li>
       <li data-sound="trou_de_balle">
         <strong>*</strong>
@@ -323,19 +323,12 @@
       <a target="_blank" href="https://twitter.com/henrottesimon">@henrottesimon</a>.
     </footer>
     <script>
-      (function (i, s, o, g, r, a, m) {
-        i['GoogleAnalyticsObject'] = r;
-        i[r] = i[r] || function () {
-            (i[r].q = i[r].q || []).push(arguments)
-          }, i[r].l = 1 * new Date();
-        a = s.createElement(o),
-          m = s.getElementsByTagName(o)[0];
-        a.async = 1;
-        a.src = g;
-        m.parentNode.insertBefore(a, m)
-      })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-      ga('create', 'UA-31496102-3', 'auto');
+      ga('create', 'UA-63461347-1', 'auto');
       ga('send', 'pageview');
 
     </script>
