--- a/public/index.html
+++ b/public/index.html
@@ -6,12 +6,12 @@
     <meta name="description" content="Soundboard adapté du film Dikkenek.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta property="og:title"
-          content="Hitman le Soundboard"/>
+          content="Dikkenek le Soundboard"/>
     <meta property="og:image"
-          content="img/mike.jpg"/>
+          content="img/claudy.jpg"/>
     <meta property="og:site_name" content="Dikkenek le Soundboard"/>
     <meta name="og:description"
-          content="Soundboard adapté du film Hitman le Cobra.">
+          content="Soundboard adapté du film Dikkenek.">
     <meta property="og:locale:alternate" content="fr_FR"/>
     <title>Dikkenek le Soundboard</title>
     <link href='//fonts.googleapis.com/css?family=Montserrat:400,700'
