correct typo - correct mp3

--- a/public/index.html
+++ b/public/index.html
@@ -39,103 +39,103 @@
         <strong>A</strong>
         <span class="words-text">Alien</span>
       </li>
-      <li data-sound="bercee_mur">
+      <li data-sound="bercee_mur"  data-keyboard="true" data-key="b">
         <strong>B</strong>
         <span class="words-text">Bercée trop prêt du mur</span>
       </li>
-      <li data-sound="biere">
+      <li data-sound="biere"  data-keyboard="true" data-key="c">
         <strong>C</strong>
         <span class="words-text">J'veux une bière!</span>
       </li>
-      <li data-sound="boire_gros_tas">
+      <li data-sound="boire_gros_tas"  data-keyboard="true" data-key="d">
         <strong>D</strong>
         <span class="words-text">Oh! Tu bois pas tout gros tas!</span>
       </li>
-      <li data-sound="boitagant">
+      <li data-sound="boitagant"  data-keyboard="true" data-key="e">
         <strong>E</strong>
         <span class="words-text">Mais non dans la boite à gants</span>
       </li>
-      <li data-sound="bonjour_sabine">
+      <li data-sound="bonjour_sabine"  data-keyboard="true" data-key="f">
         <strong>F</strong>
         <span class="words-text">Dis "Bonjour Sabine"</span>
       </li>
-      <li data-sound="ca_va_suffir">
+      <li data-sound="ca_va_suffir"  data-keyboard="true" data-key="g">
         <strong>G</strong>
         <span class="words-text">Ca va suffir maitenant!</span>
       </li>
-      <li data-sound="candie">
+      <li data-sound="candie"  data-keyboard="true" data-key="h">
         <strong>H</strong>
         <span class="words-text">Si aujourd'hui, tu ressembles plus...</span>
       </li>
-      <li data-sound="carjacker">
+      <li data-sound="carjacker"  data-keyboard="true" data-key="i">
         <strong>I</strong>
         <span class="words-text">Je viens de me faire carjacker</span>
       </li>
-      <li data-sound="cheval_truie_tronche">
+      <li data-sound="cheval_truie_tronche"  data-keyboard="true" data-key="j">
         <strong>J</strong>
         <span class="words-text">En tout cas, ils t'ont pas loupé...</span>
       </li>
-      <li data-sound="chips">
+      <li data-sound="chips"  data-keyboard="true" data-key="k">
         <strong>K</strong>
         <span class="words-text">C'est excessivement énervant...</span>
       </li>
-      <li data-sound="claudy_focan">
+      <li data-sound="claudy_focan"  data-keyboard="true" data-key="l">
         <strong>L</strong>
         <span class="words-text">Je suis Claudy Focan</span>
       </li>
-      <li data-sound="clic_mieux_claque">
+      <li data-sound="clic_mieux_claque"  data-keyboard="true" data-key="m">
         <strong>M</strong>
         <span class="words-text">Un petit click</span>
       </li>
-      <li data-sound="cochon_electrique">
+      <li data-sound="cochon_electrique"  data-keyboard="true" data-key="n">
         <strong>N</strong>
         <span class="words-text">Il est mignon le petit cochon</span>
       </li>
-      <li data-sound="cocker_coffre">
+      <li data-sound="cocker_coffre"  data-keyboard="true" data-key="o">
         <strong>O</strong>
         <span class="words-text">Y a une gamine avec des yeux ...</span>
       </li>
-      <li data-sound="connasse_va">
+      <li data-sound="connasse_va"  data-keyboard="true" data-key="p">
         <strong>P</strong>
         <span class="words-text">Connasse va!</span>
       </li>
-      <li data-sound="couilles">
+      <li data-sound="couilles"  data-keyboard="true" data-key="q">
         <strong>Q</strong>
         <span class="words-text">Pas commencer à jouer avec mes...</span>
       </li>
-      <li data-sound="coup_de_boule">
+      <li data-sound="coup_de_boule"  data-keyboard="true" data-key="r">
         <strong>R</strong>
         <span class="words-text">Le coup de boule du nouvel an</span>
       </li>
-      <li data-sound="cracher_lama">
+      <li data-sound="cracher_lama"  data-keyboard="true" data-key="s">
         <strong>S</strong>
         <span class="words-text">Cracher comme un lama</span>
       </li>
-      <li data-sound="dedicace_chteu">
+      <li data-sound="dedicace_chteu"  data-keyboard="true" data-key="t">
         <strong>T</strong>
         <span class="words-text">Passer mon permis</span>
       </li>
-      <li data-sound="deux_bieres">
+      <li data-sound="deux_bieres"  data-keyboard="true" data-key="u">
         <strong>U</strong>
         <span class="words-text">Je peux avoir deux bières</span>
       </li>
-      <li data-sound="dose_de_cheval">
+      <li data-sound="dose_de_cheval"  data-keyboard="true" data-key="v">
         <strong>V</strong>
         <span class="words-text">Dose de cheval</span>
       </li>
-      <li data-sound="encore_une_petite">
+      <li data-sound="encore_une_petite"  data-keyboard="true" data-key="w">
         <strong>W</strong>
         <span class="words-text">Encore une petite</span>
       </li>
-      <li data-sound="epilee_copine">
+      <li data-sound="epilee_copine"  data-keyboard="true" data-key="x">
         <strong>X</strong>
         <span class="words-text">Est-ce que t'es épilée?</span>
       </li>
-      <li data-sound="excessivement_enervant">
+      <li data-sound="excessivement_enervant"  data-keyboard="true" data-key="y">
         <strong>Y</strong>
         <span class="words-text">C'est excessivement énervant</span>
       </li>
-      <li data-sound="excuse_toi">
+      <li data-sound="excuse_toi"  data-keyboard="true" data-key="z">
         <strong>Z</strong>
         <span class="words-text">Excuse toi</span>
       </li>
@@ -243,13 +243,13 @@
         <strong>*</strong>
         <span class="words-text">Quel clète ce peye, trou du cul</span>
       </li>
-      <li data-sound="poil_ou_pas_poil">
+      <li data-sound="poli_ou_pas_poli">
         <strong>*</strong>
         <span class="words-text">T'es poli ou t'es pas poli</span>
       </li>
       <li data-sound="poney">
         <strong>*</strong>
-        <span class="words-text">Je vais chercher le poneyi</span>
+        <span class="words-text">Je vais chercher le poney</span>
       </li>
       <li data-sound="ptite_bite">
         <strong>*</strong>
@@ -317,7 +317,7 @@
       </li>
     </ul>
     <footer class="site-footer">
-      Confectionné pour la vengeance par
+      Confectionné autour d'une bonne fricadelle et de vedetts par
       <a target="_blank" href="https://twitter.com/kevinvzb">@kevinvzb</a>
       et
       <a target="_blank" href="https://twitter.com/henrottesimon">@henrottesimon</a>.
