Fix typo issues

--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
   </head>
   <body class="page-content">
     <header class="page-title">
-      <img src="img/claudy.jpg" alt="Mike"/>
+      <img src="img/claudy.jpg" alt="Claudy"/>
       <h1>Dikkenek le Soundboard</h1>
     </header>
     <h2 class="ofc keyboard">
