--- a/public/index.html
+++ b/public/index.html
@@ -318,9 +318,9 @@
     </ul>
     <footer class="site-footer">
       Confectionné autour d'une bonne fricadelle et de vedetts par
-      <a target="_blank" href="https://twitter.com/henrottesimon">@henrottesimon</a>
+      <a target="_blank" href="https://twitter.com/henrottesimon" title="@henrottesimon">@henrottesimon</a>
       et
-      <a target="_blank" href="https://twitter.com/kevinvzb">@kevinvzb</a>.
+      <a target="_blank" href="https://twitter.com/kevinvzb" title="@kevinvzb">@kevinvzb</a>.
     </footer>
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
