Add share button

--- a/public/index.html
+++ b/public/index.html
@@ -34,6 +34,11 @@
       Ou clique dessus.
     </h2>
     <h2 class="ofc finger">Appuie sur une des phrases pour l'entendre.</h2>
+    <div class="social-network">
+      <div class="fb-share-button" data-href="http://tinyurl.com/q9f2uue" data-layout="button_count"></div>
+      <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://tinyurl.com/q9f2uue" data-via="henrottesimon" data-related="kevinvzb" data-hashtags="dikkenek">Tweet</a>
+      <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
+    </div>
     <ul class="words">
       <li data-sound="alien" data-keyboard="true" data-key="a">
         <strong>A</strong>
@@ -332,5 +337,14 @@
       ga('send', 'pageview');
 
     </script>
+    <div id="fb-root"></div>
+    <div id="fb-root"></div>
+<script>(function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id;
+  js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.3&appId=135141406674182";
+  fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>
   </body>
 </html>
