Change permis name

--- a/public/index.html
+++ b/public/index.html
@@ -116,7 +116,7 @@
         <strong>S</strong>
         <span class="words-text">Cracher comme un lama</span>
       </li>
-      <li data-sound="dedicace_chteu"  data-keyboard="true" data-key="t">
+      <li data-sound="passer_mon_permis"  data-keyboard="true" data-key="t">
         <strong>T</strong>
         <span class="words-text">Passer mon permis</span>
       </li>
