--- a/public/index.html
+++ b/public/index.html
@@ -327,7 +327,7 @@
       et
       <a target="_blank" href="https://twitter.com/kevinvzb" title="@kevinvzb">@kevinvzb</a>.
       <br>
-      Sons extrait avec minutie par <a target="_blank" href="https://twitter.com/chteuchteu" title="@chteuchteu">@chteuchteu</a>.
+      Sons extrait avec minutie par <a target="_blank" href="https://twitter.com/chteuchteu" title="@chteuchteu">@chteuchteu</a> et <a target="_blank" href="https://twitter.com/Jakon67" title="@Jakon67">@Jakon67</a>.
     </footer>
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
