--- a/public/index.html
+++ b/public/index.html
@@ -36,7 +36,7 @@
     <h2 class="ofc finger">Appuie sur une des phrases pour l'entendre.</h2>
     <div class="social-network">
       <div class="fb-share-button" data-href="http://tinyurl.com/q9f2uue" data-layout="button_count"></div>
-      <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://tinyurl.com/q9f2uue" data-via="henrottesimon @kevinvzb @chteuchteu" data-related="kevinvzb" data-hashtags="dikkenek-le-soundboard">Tweet</a>
+      <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://tinyurl.com/q9f2uue" data-via="henrottesimon @kevinvzb @chteuchteu" data-related="kevinvzb" data-hashtags="dikkeneklesoundboard">Tweet</a>
       <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
     </div>
     <ul class="words">
