--- a/public/index.html
+++ b/public/index.html
@@ -527,7 +527,7 @@
       et
       <a target="_blank" href="https://twitter.com/kevinvzb" title="@kevinvzb">@kevinvzb</a>.
       <br>
-      Merci à <a target="_blank" href="https://twitter.com/chteuchteu" title="@chteuchteu">@chteuchteu</a> et <a target="_blank" href="https://twitter.com/Jakon67" title="@Jakon67">@Jakon67</a> pour les premières versions des sons.
+      Merci à <a target="_blank" href="https://twitter.com/chteuchteu" title="@chteuchteu">@chteuchteu</a> et <a target="_blank" href="https://twitter.com/Jakon67" title="@Jakon67">@Jakon67</a> pour la première version des sons.
     </footer>
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
