--- a/public/index.html
+++ b/public/index.html
@@ -529,16 +529,7 @@
       <br>
       Merci à <a target="_blank" href="https://twitter.com/chteuchteu" title="@chteuchteu">@chteuchteu</a> et <a target="_blank" href="https://twitter.com/Jakon67" title="@Jakon67">@Jakon67</a> pour la première version des sons.
     </footer>
-    <script>
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-      ga('create', 'UA-63461347-1', 'auto');
-      ga('send', 'pageview');
-
-    </script>
+    <script src="js/ga.js"></script>
     <div id="fb-root"></div>
     <script>(function(d, s, id) {
       var js, fjs = d.getElementsByTagName(s)[0];
