Add mignon cochon

--- a/public/index.html
+++ b/public/index.html
@@ -328,6 +328,10 @@
         <strong>&nbsp;</strong>
         <span class="words-text">Michael Jackson</span>
       </li>
+      <li data-sound="mignon_cochon">
+        <strong>&nbsp;</strong>
+        <span class="words-text">Mignon le petit cochon</span>
+      </li>
       <li data-sound="moche">
         <strong>&nbsp;</strong>
         <span class="words-text">Moche</span>
