Update social links / Add link to mothership.

--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,6 @@
     <link href='//fonts.googleapis.com/css?family=Montserrat:400,700'
           rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="css/style.css"/>
-    <!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>-->
     <script src="js/jquery.js"></script>
     <script src="js/modernizr.js"></script>
     <script src="js/mousetrap.js"></script>
@@ -35,8 +34,8 @@
     </h2>
     <h2 class="ofc finger">Appuie sur une des phrases pour l'entendre.</h2>
     <div class="social-network">
-      <div class="fb-share-button" data-href="http://tinyurl.com/q9f2uue" data-layout="button_count"></div>
-      <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://tinyurl.com/q9f2uue" data-hashtags="dikkeneklesoundboard">Tweet</a>
+      <div class="fb-share-button" data-href="http://dikkenek.soundboard.club" data-layout="button_count"></div>
+      <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://dikkenek.soundboard.club" data-hashtags="dikkeneklesoundboard,soundboardclub">Tweet</a>
       <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
     </div>
     <ul class="words">
@@ -532,6 +531,10 @@
       <a target="_blank" href="https://twitter.com/kevinvzb" title="@kevinvzb">@kevinvzb</a>.
       <br>
       Merci à <a target="_blank" href="https://twitter.com/chteuchteu" title="@chteuchteu">@chteuchteu</a> et <a target="_blank" href="https://twitter.com/Jakon67" title="@Jakon67">@Jakon67</a> pour la première version des sons.
+      <div class="network">
+        Découvrez les autres soundboards sur
+         <a href="//soundboard.club" target="_blank">soundboard.club</a>.
+      </div>
     </footer>
     <script src="js/ga.js"></script>
     <div id="fb-root"></div>
